# hermes-plugins

./: .gitignore  CITATION.cff  LICENSE  README.md  hermes.toml  pyproject.toml
src/carpentries_hermes_plugins/: deposit_trainingmaterial_jsonld.py  harvest_amy.py  process_amy.py
