[tool.poetry]

name = "carpentries-hermes-plugins"

version = "0.0.1"

description = "plugins to apply HERMES workflow to Carpentries lessons"

license = "MIT"

authors = [
    "Toby Hodges <tobyhodges@carpentries.org>",
]

repository = "https://github.com/tobyhodges/hermes-plugins"

[tool.poetry.dependencies]

python = "^3.10"
hermes = { git = "https://github.com/hermes-hmc/workflow.git", branch = "develop" }

