[tool.poetry]

name = "carpentries_hermes_plugins"

version = "0.0.1"

description = "plugins to apply HERMES workflow to Carpentries lessons"

license = "MIT"

authors = [
    "Toby Hodges <tobyhodges@carpentries.org>",
]

repository = "https://github.com/tobyhodges/hermes-plugins"

[tool.poetry.dependencies]

python = "^3.10"
hermes = { git = "https://github.com/hermes-hmc/workflow.git", branch = "develop" }


# [tool.poetry.plugins."hermes.harvest"]
# amy = "carpentries_hermes_plugins.harvest_amy:harvest_amy"
#
# [tool.poetry.plugins."hermes.preprocess"]
# amy = "carpentries_hermes_plugins.process_amy:process_amy"

[tool.poetry.plugins."hermes.deposit.publish"]
trainingmaterial_jsonld = "carpentries_hermes_plugins.deposit_trainingmaterial_jsonld:export"
